# handlers/user.go
@@ -18,7 +18,7 @@ func NewUserHandler(s service.ServiceUserI) *UserHandler {
 }
 
 // UserMe get info about user, by access token
-// @Summary Получение GUID текущего пользователя и информации о нем."
+// @Summary Получение GUID текущего пользователя и информации о нем
 // @Description По токену доступа возвращает информацию о пользователе. Необходим заголовок "Authorization": "Bearer {token}
 // @Tags user
 // @Accept json
@@ -26,7 +26,8 @@ func NewUserHandler(s service.ServiceUserI) *UserHandler {
 // @Security Bearer
 // @Param        Authorization	  header    string    true   	"Заголовок авторизации. Пример: Bearer {token}"
 // @Success 200 {object} httputil.ResponseHTTP{data=models.LoginTokens}
-// @Failure 400 {object} httputil.ResponseHTTP "Bad Request"
+// @Failure 400 {object} httputil.ResponseHTTP "Invalid headers. Must be "Authorization": "Bearer {token}""
+// @Failure 401 {object} httputil.ResponseHTTP "Unauthorized"
 // @Router /api/v1/user/me [get]
 func (h *UserHandler) UserMe(c *fiber.Ctx) error {
 	userMe := h.s.UserMe(c)
@@ -39,14 +40,15 @@ func (h *UserHandler) UserMe(c *fiber.Ctx) error {
 
 // UnloginMe deauthorization user
 // @Summary Деавторизация токена пользователя
-// @Description По токену авторизации деактивирует пользователя так, что он не может запросить user/me или /refresh. Необходим заголовок "Authorization": "Bearer {token}
+// @Description По токену авторизации деактивирует пользователя так, что он не может запросить user/me или /refresh. Необходим заголовок "Authorization": "Bearer {token}"
 // @Tags user
 // @Accept json
 // @Produce json
 // @Security Bearer
 // @Param        Authorization	  header    string    true   	"Заголовок авторизации. Пример: Bearer {token}"
 // @Success 200 {object} httputil.ResponseHTTP{data=models.User}
-// @Failure 400 {object} httputil.ResponseHTTP "Invalid headers muts be "Authorization": "Bearer {token}""
+// @Failure 400 {object} httputil.ResponseHTTP "Invalid headers. Must be "Authorization": "Bearer {token}""
+// @Failure 401 {object} httputil.ResponseHTTP "Unauthorized"
 // @Failure 403 {object} httputil.ResponseHTTP "Access denied"
 // @Router /api/v1/user/unlogin [get]
 func (h *UserHandler) UnloginMe(c *fiber.Ctx) error {
@@ -63,21 +65,22 @@ func (h *UserHandler) UnloginMe(c *fiber.Ctx) error {
 
 // DeactivateMe deactivate authorizatied user
 // @Summary Диактивация авторизованного пользователя
-// @Description Блокирует пользователя пользователя по токенгу авторизации. Необходим заголовок "Authorization": "Bearer {token}
+// @Description Блокирует пользователя пользователя по токенгу авторизации. Необходим заголовок "Authorization": "Bearer {token}:"
 // @Tags user
 // @Accept json
 // @Produce json
 // @Security Bearer
 // @Param        Authorization	  header    string    true   	"Заголовок авторизации. Пример: Bearer {token}"
 // @Success 200 {object} httputil.ResponseHTTP{data=models.User}
-// @Failure 400 {object} httputil.ResponseHTTP "Bad Request"
+// @Failure 400 {object} httputil.ResponseHTTP "Invalid headers. Must be "Authorization": "Bearer {token}""
 // @Failure 401 {object} httputil.ResponseHTTP "Unauthorized"
+// @Failure 403 {object} httputil.ResponseHTTP "Access denied"
 // @Router /api/v1/user/deactivate [get]
 // @Deprecated
 func (h *UserHandler) DeactivateMe(c *fiber.Ctx) error {
 	authHeader := c.Get("Authorization")
 	if !strings.HasPrefix(authHeader, "Bearer ") {
-		return c.Status(http.StatusBadRequest).JSON(httputil.BadRequest("Invalid headers muts be \"Authorization\": \"Bearer {token}\""))
+		return c.Status(http.StatusBadRequest).JSON(httputil.BadRequest("Invalid headers. Must be \"Authorization\": \"Bearer {token}\""))
 	}
 
 	userDeactivated, err := h.s.DeativateMe(authHeader)
